<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoAnchorPoint="0.5"
    tools:context="com.fiap.mcustodio.placarapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textview_main_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:text="@string/main_times"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_hometeam"/>

            <EditText
                android:id="@+id/edittext_main_team1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_hintname"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_awayteam"/>

            <EditText
                android:id="@+id/edittext_main_team2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/main_hintname" />

            <Button
                android:id="@+id/button_main_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="comecarJogo"
                android:text="@string/main_startgame" />

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_main_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="main_example" />

    </RelativeLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>
